<resources>
    <string name="app_name">MealPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_instead">Don\'t have an account? Sign up.</string>
    <string name="signin_instead">Already have an account? Sign in.</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="language">Croatian</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="no_product_found">No product found for scanned barcode</string>
    <string name="enter_product_details">Please enter product details so we can add it to our database:</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="product_type">Select what type of product this is:</string>
    <string name="product_type_hint">Generic name, eg. milk</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="cancel">Cancel</string>
    <string name="save_add">Save and add</string>
    <string name="delete_confirm">Delete Confirmation</string>
    <string name="delete_question">Are you sure you want to delete this pantry?</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="check_network">Check your network connection</string>
    <string name="add_pantry">Add pantry</string>
    <string name="add">Add</string>
    <string name="enter_pantry_name">Enter pantry name, eg. Fridge</string>
    <string name="login_success">Login success!</string>
    <string name="wrong_username">Wrong username or password.</string>
    <string name="signup_success">Signup success!</string>
    <string name="product_found">Product found</string>
    <string name="product_name">Product name</string>
    <string name="generic_type">Generic type</string>
    <string name="quantity">Quantity</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="save_ingredients">Save ingredients</string>
    <string name="flash_volume">For flash use volume up key</string>
    <string name="insert_items_first">Please insert some items first</string>
    <string name="success">Success!</string>
    <string name="product_add_success">Product added successfully!</string>
    <string name="choose_product_type">Choose product type</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="pantries">Pantries</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="add_to_pantry">Add to pantry</string>

</resources>