<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="375dp"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@drawable/popup_style"
    android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/product_found"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:padding="10dp"
        android:gravity="center"
        android:id="@+id/productFoundTv"
        ></TextView>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/product_found"
        android:padding="10dp"
        android:layout_gravity="center"></ImageView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_accent"
        android:layout_marginVertical="10dp"
        ></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:textSize="18dp"
            android:text="@string/product_name"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Unit"
            android:layout_marginLeft="10dp"
            android:id="@+id/productNameTv"
            android:layout_margin="10dp"
            android:textStyle="bold"></TextView>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_accent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:textSize="18dp"
            android:text="@string/generic_type"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Unit"
            android:layout_marginLeft="10dp"
            android:id="@+id/genericIngTv"
            android:layout_margin="10dp"
            android:textStyle="bold"></TextView>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_accent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:textSize="18dp"
            android:text="@string/quantity"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Unit"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:id="@+id/productQuantityTv"
            android:layout_margin="10dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Unit"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:id="@+id/productQuantityUnitTv"
            android:layout_margin="10dp"></TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_gravity="center">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="14dp"
                android:layout_gravity="center"
                android:id="@+id/cancelAddProductTv"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="0.5">
            <Button
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:text="@string/add"
                android:layout_gravity="center"
                android:id="@+id/addProductBtn"
                android:gravity="center"
                android:background="@drawable/button_style"></Button>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>